apps/relay/k8s/components/network-policy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: relay
spec:
  podSelector:
    matchLabels: {app: relay, role: server}
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - {protocol: TCP, port: 7000}
    - from:
        - podSelector:
            matchLabels: {app: relay, role: server}
      ports:
        - {protocol: TCP, port: 7001}
  egress:
    - to:
        - podSelector:
            matchLabels: {app: relay, role: server}
      ports:
        - {protocol: TCP, port: 7001}
    - ports:
        - {protocol: UDP, port: 53}
        - {protocol: TCP, port: 443}
        - {protocol: TCP, port: 80}
